Initial YML configuration

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,220 @@
-site_name: My Docs
+# Better read on VSCode with the TODO Highlight v2 module
+
+### General information 
+
+#  Name displayed in the top menu and in the browsers tabs
+site_name: Documentation
+#  URL of the website
+site_url: https://documentation.frolov.eu/
+# GitHub repo URL
+repo_url: https://github.com/FlagHunter01/documentation.frolov.eu/
+#  GitHub repo name
+repo_name: documentation.frolov.eu 
+
+### Navigation
+
+nav: 
+  - Home: index.md
+
+### Theme customization
+
+theme:
+  # Enables the material theme
+  name: material
+
+  ## Colors
+
+  palette:
+    # Palette toggle for automatic mode
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/brightness-auto
+        name: Switch to light mode
+      primary: blue grey
+      accent: amber
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default 
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+      primary: blue grey
+      accent: amber
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to system preference
+      primary: teal
+      accent: amber
+
+  ## Font
+
+  # If the privacy module isn't used, uncomment the following line to stay in GDPR
+  #font: false
+  font:
+    # All text except code
+    text: Roboto
+    # Inline and block code
+    code: Roboto Mono
+  
+  ## Language
+
+  # Don't forget to change if in multilingual project
+  language: en
+
+  ## Logo and icons
+
+  # TODO: Use a custom image
+  #logo: assets/logo.png
+  # TODO: Use a bundled icon
+  #icon:
+  #  logo: material/library
+  # TODO: favicon (icon in the browsers tab)
+  #favicon: assets/favicon.png
+
+  features:
+    
+    ## Navigation
+
+    # Monopage mode using XHR
+    - navigation.instant
+    # Prefetch the page when the user hovers the link to it
+    - navigation.instant.prefetch
+    # Show loading progress bar (not shown if loading takes less than 0.4s) 
+    - navigation.instant.progress
+    # Link preview 
+    - navigation.instant.preview
+    # Anchor tracking
+    - navigation.tracking
+    # Display tabs in top menu
+    - navigation.tabs
+    # Breadcrumbs on top of the page
+    - navigation.path
+    # Allow sections to have index pages
+    - navigation.indexes
+    # Back to top button
+    - navigation.top
+    # Footer nav
+    - navigation.footer
+
+    ## Search
+
+    # Search autocompletion
+    - search.suggest
+    # Highlight hits
+    - search.highlight
+
+    ## GitHub integration
+    
+    # View page source
+    - content.action.view
+
+    ## Code blocks
+
+    # Copy button
+    - content.code.copy
+    # Line selection button
+    - content.code.select
+    # Annotations
+    - content.code.annotate
+
+    ## Misc
+
+    # Link content tabs togeather
+    - content.tabs.link
+    # Display footnotes as tooltips
+    - content.footnote.tooltips
+    # Tooltips
+    - content.tooltips
+
+### Plugins
+
+plugins:
+  # Privacy (GRDP)
+  - privacy
+  # Search
+  - search
+  # Social cards
+  #- social
+  # Blog
+  #- blog
+  # RSS
+  #- rss:
+  #    match_path: blog/posts/.*
+  #    date_from_meta:
+  #      as_creation: date
+  # Git dates
+  - git-revision-date-localized:
+      # Show the creation date along with the last modif date
+      enable_creation_date: true
+  # Git commiters 
+  - git-committers:
+    # Repo URL
+      repository: FlagHunter01/documentation.frolov.eu
+    # Branch
+      branch: main
+  # Offline
+  - offline
+    
+extra:
+  ### Socials
+
+  # customize
+  social:
+    - icon: material/github
+      link: https://github.com/FlagHunter01
+
+markdown_extensions:
+  # Abbreviations: RER *[RER]: Réseau Express Régional  --> <p><abbr title="Réseau Express Régional">RER</abbr></p>
+  - abbr
+  # Admonitions (or call-outs)
+  - admonition
+  # Collapseable admonitions
+  - pymdownx.details
+  # Annotations 
+  - md_in_html
+  # Inline footnotes
+  - footnotes
+  # Table of contents
+  - toc:
+    # Make the anchor visible
+      permalink: ⚓︎
+  # Tables
+  - tables
+  # Better bold and italic detection
+  - pymdownx.betterem
+  # Text highlighting
+  - pymdownx.caret
+  # Code hightlighting
+  - pymdownx.highlight:
+      anchor_linenums: true
+  # Inline code highlighting
+  - pymdownx.inlinehilite
+  # Nesting code and admonitions
+  - pymdownx.superfences
+  # Subscript 
+  - pymdownx.mark
+  # Superscript 
+  - pymdownx.tilde
+  # Diff support
+  - pymdownx.critic
+  # Emoji
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji 
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  # Render keyboard keys
+  - pymdownx.keys
+  # Convert strings to symbols e.g.: &copy --> ©
+  - pymdownx.smartsymbols
+  # Content tabs
+  - pymdownx.tabbed:
+      alternate_style: true
+  # Lists with checkboxes
+  - pymdownx.tasklist:
+      custom_checkbox: true
+    # Make them clickable
+      clickable_checkbox: true
+  # Buttons
+  - attr_list
