Prettify repo_name

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ site_url: https://documentation.frolov.eu/
 # GitHub repo URL
 repo_url: https://github.com/FlagHunter01/documentation.frolov.eu/
 #  GitHub repo name
-repo_name: documentation.frolov.eu 
+repo_name: Documentation
 
 ### Navigation
 
