rename index to main in md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,7 @@ nav:
   - Miscellaneous:
     - misc/index.md
     - Markdown:
-      - Introcution: misc/md/index.md
+      - Introcution: misc/md/main.md
       - MkDocs: misc/md/mkdocs.md
 
 ### Theme customization
