--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,7 +29,7 @@ nav:
     - Markdown:
       - Introcution: misc/md/main.md
       - MkDocs: misc/md/mkdocs.md
-    - GitHub: msic/gh/main.md
+    - GitHub: misc/gh/main.md
 
 ### Theme customization
 
