Add monitoring sub to Linux. Add and write index to monitoring. Add and write etckeeper. Add related changes to YML

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,9 @@ nav:
   - Home: index.md
   - Linux:
     - linux/index.md
+    Monitoring:
+      - linux/monitoring/index.md
+      - etckeeper: linux/monitoring/etckeeper.md
   - Windows:
     - windows/index.md
     - Yubikey:
