--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -164,7 +164,7 @@ plugins:
   #    date_from_meta:
   #      as_creation: date
   # Git dates
-  - git-revision-date-localized
+  #- git-revision-date-localized
   # Offline
   - offline
     
