--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,7 @@ nav:
     - linux/index.md
     - Mail:
       - linux/mail/index.md
-      - DMARC: dmarc.md
+      - DMARC: linux/mail/dmarc.md
     - Monitoring:
       - linux/monitoring/index.md
       - etckeeper: linux/monitoring/etckeeper.md
