--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -167,7 +167,9 @@ plugins:
   #    date_from_meta:
   #      as_creation: date
   # Git dates
-  #- git-revision-date-localized
+  - git-revision-date-localized:
+      enable_creation_date: true 
+      type: timeago
   # Offline
   - offline
     
