Hide /prom/ne.md from YML

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,7 +28,7 @@ nav:
       - Prometheus & Grafana:
         - linux/monitoring/prom/index.md
         - Basic configuration: linux/monitoring/prom/config.md
-        - Sneaking metrics through node_exporter: linux/monitoring/prom/ne.md
+        #- Sneaking metrics through node_exporter: linux/monitoring/prom/ne.md
       - etckeeper: linux/monitoring/etckeeper.md
       - Python web graph: https://flaghunter01.github.io/linux-monitoring/
   - Windows:
